idea/testData/multiModuleLineMarker/withOverloads/common/common.kt
expect fun <!LINE_MARKER("descr='Has actuals in JVM'")!>foo<!>(): Int

expect fun <!LINE_MARKER("descr='Has actuals in JVM'")!>foo<!>(arg: Int): Int
